# permanent

./: .gitignore  LICENSE  MANIFEST  README  README.md  makefile  pyproject.toml  requirements.txt  run-tests.py  run-tests.sh  setup.py  tox.ini
lib/: __init__.py
permanentbis/: __init__.py
src/: bithacks.h  npy_util.h  old.c  oldold.c  permanent.c  permanents.h
tests/: test.py  test_permanent.py
