[build-system]
requires = ["setuptools>=74.1", "wheel", "numpy >= 2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "permanentbis"
version = "0.1.0beta1"
authors = [
 {name = "Pete Shadbolt", email = "s.szufa@gmail.com"},
 {name = "Andrzej Kaczmarczyk", email = "droodev@agh.edu.pl"}
]
maintainers = [
 {name = "Andrzej Kaczmarczyk", email = "droodev@agh.edu.pl"}
]
description = "Computing the permanent of a matrix."
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = ["numpy >= 2.1"]

[project.urls]
Repository="https://github.com/droodev/permanentbis"
